home  xml started

--- a/AbstractFood/app/src/main/res/menu/menu.xml
+++ b/AbstractFood/app/src/main/res/menu/menu.xml
@@ -16,6 +16,9 @@
     <item android:title="@string/login"
           android:id="@+id/menu_login"/>
 
+    <item android:title="@string/Home"
+        android:id="@+id/menu_home"/>
+
     
 
 </menu>
