--- a/AbstractFood/app/src/main/res/layout/activity_login.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_login.xml
@@ -8,13 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.food.abstractfood.LoginActivity">
+    tools:context="com.food.abstractfood.LoginActivity"
+    style="@style/all_page_colors"
+    >
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Username"
+        android:hint="Username"
         android:ems="10"
         android:id="@+id/editText"
         android:layout_alignParentTop="true"
@@ -31,12 +33,12 @@
         android:layout_below="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:layout_marginTop="30dp"
-        android:text="Password"
+        android:hint="Password"
         android:password="false"
         android:layout_alignParentEnd="true" />
 
     <Button
-        style="?android:attr/buttonStyleSmall"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In"
@@ -44,6 +46,7 @@
         android:layout_below="@+id/editText2"
         android:layout_alignParentStart="true"
         android:layout_marginTop="51dp"
+        style="@style/all_button_colors"
         android:layout_alignParentEnd="true" />
 
     <Button
@@ -54,7 +57,9 @@
         android:layout_marginTop="52dp"
         android:layout_below="@+id/button"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        style="@style/all_button_colors"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,7 +69,8 @@
         android:layout_below="@+id/button2"
         android:layout_marginTop="46dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        style="@style/all_button_colors"/>
 
     <TextView
         android:layout_width="wrap_content"
