--- a/AbstractFood/app/src/main/res/layout/activity_profile.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_profile.xml
@@ -8,6 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.food.abstractfood.ProfileActivity">
+    tools:context="com.food.abstractfood.ProfileActivity"
+    style="@style/all_page_colors"
+    >
 
 </RelativeLayout>
