--- a/AbstractFood/app/src/main/res/layout/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,9 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.food.abstractfood.SignupActivity">
+        tools:context="com.food.abstractfood.SignupActivity"
+        style="@style/all_page_colors"
+        >
 
         <EditText
             android:layout_width="wrap_content"
@@ -72,7 +74,8 @@
         android:layout_marginBottom="23dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp" />
+        android:layout_marginStart="24dp"
+        style="@style/all_button_colors"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -80,7 +83,8 @@
         android:text="Sign up"
         android:id="@+id/button5"
         android:layout_alignTop="@+id/button4"
-        android:layout_toEndOf="@+id/editText5" />
+        android:layout_toEndOf="@+id/editText5"
+        style="@style/all_button_colors"/>
 
     <TextView
         android:layout_width="wrap_content"
