--- a/AbstractFood/app/src/main/res/layout/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_signup.xml
@@ -23,7 +23,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editText3"
-        android:text="Username"
+        android:hint="Username"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="25dp" />
@@ -34,7 +34,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/editText4"
-        android:text="Email Address"
+        android:hint="Email Address"
         android:layout_below="@+id/editText3"
         android:layout_alignParentStart="true"
         android:layout_marginTop="24dp" />
@@ -44,11 +44,13 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
+        android:hint="Password"
         android:id="@+id/passwordtxt"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignParentStart="true" />
 
     <EditText
+        android:hint="Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -125,14 +127,6 @@
             android:id="@+id/editText8"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/editText9"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+    </RelativeLayout>
 </ScrollView>
