--- a/AbstractFood/app/src/main/res/values/styles.xml
+++ b/AbstractFood/app/src/main/res/values/styles.xml
@@ -3,19 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#ef6c00</item>
-        <item name="colorPrimaryDark">#e65100</item>
-        <item name="colorAccent">#212121</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/BackgroundColor</item>
     </style>
     <style name="all_button_colors">
         <item name="android:background">#9ccc65</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">10dp</item>
-
-    </style>
-
-    <style name="all_page_colors">
-        <item name="android:background">#fff3e0</item>
 
     </style>
 </resources>
