--- a/AbstractFood/app/src/main/res/values/colors.xml
+++ b/AbstractFood/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#e65100</color>
     <color name="colorAccent">#212121</color>
     <color name="BackgroundColor">#fff3e0</color>
+    <color name="background_button">#9ccc65</color>
 </resources>
