--- a/AbstractFood/app/src/main/res/layout/activity_profile.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_profile.xml
@@ -12,4 +12,54 @@
 
     >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="My Uploads"
+        android:id="@+id/textView"
+        android:layout_above="@+id/view_pager"
+        android:layout_alignParentStart="true" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="My Favorites"
+        android:id="@+id/MyFavoritesTxt"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        android:id="@+id/ChangePsButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        style="@style/all_button_colors"
+        android:layout_alignEnd="@+id/textView" />
+
+
+        />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_height="180dp"
+        android:layout_width="match_parent"
+        android:layout_above="@id/MyFavoritesTxt"
+
+
+    ></android.support.v4.view.ViewPager>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager2"
+        android:layout_height="180dp"
+        android:layout_width="match_parent"
+        android:layout_above="@id/ChangePsButton"
+        android:layout_below="@id/MyFavoritesTxt"
+
+
+        ></android.support.v4.view.ViewPager>
+
 </RelativeLayout>
