--- a/AbstractFood/app/src/main/res/menu/menu.xml
+++ b/AbstractFood/app/src/main/res/menu/menu.xml
@@ -19,6 +19,11 @@
     <item android:title="@string/Home"
         android:id="@+id/menu_home"/>
 
+    <item android:title="Report"
+        android:id="@+id/menu_report"/>
+
+
+
     <item android:title="Update"
         android:id="@+id/menu_update"
         />
