--- a/AbstractFood/app/src/main/res/layout/activity_home.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_home.xml
@@ -54,4 +54,12 @@
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/button5" />
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="210dp"
+        android:layout_marginBottom="56dp"></TableRow>
+
 </RelativeLayout>
