--- a/AbstractFood/app/src/main/res/layout/activity_report.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_report.xml
@@ -99,7 +99,7 @@
         android:layout_height="60dp"
         android:text="New MultiAutoCompleteTextView"
         android:id="@+id/txtoutput"
-
+        android:background="#FFF"
         android:layout_below="@+id/textView7"
         android:layout_alignStart="@+id/textView7"
         android:layout_above="@+id/button6" />
