--- a/AbstractFood/app/src/main/res/layout/activity_upload.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_upload.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.food.abstractfood.UpdateActivity">
+    tools:context=".UploadActivity">
 
     <EditText
         android:layout_width="match_parent"
