--- a/AbstractFood/app/src/main/res/drawable/background.xml
+++ b/AbstractFood/app/src/main/res/drawable/background.xml
@@ -3,8 +3,14 @@
 <shape android:innerRadius="3dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
 
-<solid android:color="@color/background_button"></solid>
+<solid android:color="#fff"/>
 
+    <corners android:bottomLeftRadius="@dimen/space_between"
+             android:bottomRightRadius="@dimen/space_between"
+             android:topLeftRadius="@dimen/space_between"
+             android:topRightRadius="@dimen/space_between"
+             />
 
+    <stroke android:width="@dimen/space_between" android:color="#000"/>
 
 </shape>
