--- a/AbstractFood/app/src/main/res/layout/activity_report.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_report.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    tools:context="com.food.abstractfood.ReportActivity"
     android:weightSum="1">
 
     <CheckBox
@@ -18,24 +18,22 @@
         android:textStyle="italic"
         android:textSize="18dp"
         android:layout_below="@+id/textView"
-        android:layout_alignStart="@+id/checkBox2"
-        android:layout_marginTop="32dp" />
+        android:layout_alignStart="@+id/checkBox2" />
 
     <TextView
 
 
         android:layout_width="250dp"
         android:layout_height="44dp"
-        android:text="      Reasons for reporting the food"
+        android:text="Reasons for reporting the food"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="34dp"
         android:textColor="#000"
         android:textStyle="normal"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:layout_marginLeft="30dp"
-        android:layout_alignEnd="@+id/button7" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView7" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -58,8 +56,7 @@
         android:textColor="#000"
         android:textStyle="italic"
         android:textSize="18dp"
-        android:layout_below="@+id/checkBox2"
-        android:layout_alignEnd="@+id/textView7" />
+        android:layout_below="@+id/checkBox2" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -78,22 +75,21 @@
         android:layout_height="wrap_content"
         android:text="Comments (optional):"
         android:id="@+id/textView7"
-        android:layout_marginLeft="28dp"
         android:textStyle="bold"
         android:textColor="#000"
         android:textSize="18dp"
         android:layout_above="@+id/txtoutput"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/txtoutput" />
 
     <Button
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:text="Cancel"
         android:id="@+id/button6"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="31dp"
         android:backgroundTint="#FF99CC00"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView" />
+        android:layout_alignStart="@+id/txtoutput" />
 
     <Button
         android:layout_width="112dp"
@@ -101,20 +97,18 @@
         android:text="Submit"
         android:id="@+id/button7"
         android:backgroundTint="#FF99CC00"
-        android:layout_alignTop="@+id/button6"
-        android:layout_toEndOf="@+id/checkBox4" />
+        android:layout_below="@+id/txtoutput"
+        android:layout_alignEnd="@+id/txtoutput" />
 
 
     <MultiAutoCompleteTextView
         android:layout_width="300dp"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:text=" "
         android:id="@+id/txtoutput"
         android:background="#FFF"
         android:layout_above="@+id/button6"
-        android:layout_marginBottom="47dp"
-        android:layout_alignStart="@+id/button6"
-        android:layout_alignEnd="@+id/button7" />
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
