--- a/AbstractFood/app/src/main/res/layout/activity_food.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_food.xml
@@ -18,29 +18,18 @@
         android:id="@+id/editText6"
         android:text="Food name"
         android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/textView8"
-        android:layout_toEndOf="@+id/horizontalScrollView" />
+         />
 
-    <HorizontalScrollView
-        android:layout_width="wrap_content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/food_page_view_pager"
         android:layout_height="150dp"
-        android:id="@+id/horizontalScrollView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_width="match_parent"
+        android:layout_below="@+id/editText6"
+        android:layout_above="@+id/imageView3"
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+        />
 
 
-
-
-
-
-        </LinearLayout>
-    </HorizontalScrollView>
 
     <ImageView
         android:layout_width="50dp"
@@ -145,5 +134,46 @@
         android:background="#FF99CC00"
         android:layout_centerHorizontal="true" />
 
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:id="@+id/horizontalScrollView"
+        android:layout_below="@+id/editText6"
+        android:layout_alignParentStart="true" >
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:id="@+id/imageView6"
+            android:src="@drawable/fooda"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:id="@+id/imageView7"
+            android:src="@drawable/foodo"
+            />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:id="@+id/imageView8"
+            android:src="@drawable/foode"
+            />
+
+
+    </LinearLayout>
+
+
+    </HorizontalScrollView>
 
 </RelativeLayout>
