--- a/AbstractFood/app/src/main/res/layout/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_signup.xml
@@ -43,8 +43,9 @@
         android:ems="10"
         android:hint="Password"
         android:id="@+id/passwordtxt"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignParentStart="true" />
+            android:layout_below="@+id/textView4"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="176dp" />
 
     <EditText
         android:hint="Verify Password"
