--- a/AbstractFood/app/src/main/res/layout/activity_home.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_home.xml
@@ -28,31 +28,27 @@
         android:layout_height="wrap_content"
         android:text="Upload"
         android:id="@+id/button5"
+        style="@style/all_button_colors"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="37dp"
-        android:layout_alignEnd="@+id/button4"
-        style="@style/all_button_colors"
-        />
+        android:layout_alignEnd="@+id/imageView2" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/foodie"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="78dp"
-        android:layout_alignBottom="@+id/button4" />
+        android:src="@drawable/plate"
+        android:layout_above="@+id/button4"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:src="@drawable/uploader"
-        android:layout_below="@+id/imageView"
+        android:src="@drawable/upload"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/button5" />
+        android:layout_above="@+id/button5"
+        android:layout_below="@+id/button4" />
 
     <TableRow
         android:layout_width="match_parent"
