--- a/AbstractFood/app/src/main/res/layout/swipe_layout.xml
+++ b/AbstractFood/app/src/main/res/layout/swipe_layout.xml
@@ -3,10 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <ImageButton
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image_view"
+        android:layout_height="match_parent"
+        android:id="@+id/image_button_swipe"
+        android:clickable="true"
+        android:scaleType="fitCenter"
+        android:onClick="ButtonClickListener"
+        android:backgroundTintMode="add"
        />
 
 </LinearLayout>
