Discover Activity: - Adds tabbed layout - Search by name works (only with a static string array) - Added the Search by name activity - Tab Adapter (feel free to reuse) - A few images in the drawables( need to be resized)
A few xml files were renamed
for example:
passsword.xml -> password.xml

:)

--- a/AbstractFood/app/src/main/res/values/styles.xml
+++ b/AbstractFood/app/src/main/res/values/styles.xml
@@ -2,27 +2,27 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+
+       <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/BackgroundColor</item>
-
     </style>
-<style name="Discovertheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    <item name="colorAccent">@color/colorAccent</item>
-    <item name="android:colorBackground">@color/BackgroundColor</item>
-
-</style>
     <style name="all_button_colors">
         <item name="android:background">@drawable/button</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">10dp</item>
 
     </style>
+
+    <style name ="NoActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/BackgroundColor</item>
+
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
