--- a/AbstractFood/app/src/main/res/layout/discover_search.xml
+++ b/AbstractFood/app/src/main/res/layout/discover_search.xml
@@ -11,10 +11,9 @@
         android:scaleType="centerCrop"
         android:id="@+id/searchbynamebutton"
         android:src="@drawable/searchbyname"
-
-        android:onClick="redirectSBN"
         android:layout_above="@+id/searchbynametxt"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="redirectSBN" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,7 +32,8 @@
         android:src="@drawable/ingredientfinder"
         android:layout_below="@+id/searchbynametxt"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="27dp" />
+        android:layout_marginTop="27dp"
+        android:onClick="redirectIF" />
 
     <TextView
         android:layout_width="wrap_content"
