--- a/AbstractFood/app/src/main/res/layout/activity_profile.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_profile.xml
@@ -69,4 +69,12 @@
 
         ></android.support.v4.view.ViewPager>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView6"
+        android:layout_below="@+id/view_pager2"
+        android:layout_toLeftOf="@id/ChangePsText"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
