did some database stuff

--- a/AbstractFood/app/src/main/res/layout/activity_upload.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_upload.xml
@@ -104,6 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/ingred"
+        android:onClick="ingred_adder_page"
         android:id="@+id/ingredient_adder_bt"
         android:background="@drawable/button"
         />
