--- a/AbstractFood/app/src/main/res/layout/activity_login.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.food.abstractfood.LoginActivity"
+    tools:context="com.food.abstractfood.MainActivity"
 
     >
 
@@ -47,6 +47,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="51dp"
         style="@style/all_button_colors"
+        android:onClick="signin"
         android:layout_alignParentEnd="true" />
 
     <Button
