--- a/AbstractFood/app/src/main/res/layout/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_signup.xml
@@ -43,28 +43,23 @@
         android:ems="10"
         android:hint="Password"
         android:id="@+id/passwordtxt"
-            android:layout_below="@+id/textView4"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="176dp" />
+            android:layout_marginTop="32dp"
+            android:layout_below="@+id/editText4"
+            android:layout_toStartOf="@+id/button5" />
 
     <EditText
-        android:hint="Verify Password"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
+        android:hint="Verify Password"
+
         android:id="@+id/editText5"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView9"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload Profile Picture"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="19dp" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -90,33 +85,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="8-16 characters"
-        android:id="@+id/textView4"
-        android:textSize="10dp"
-        android:layout_above="@+id/editText5"
-        android:layout_alignEnd="@+id/button5"
-        android:layout_marginBottom="24dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="one uppercase"
-        android:id="@+id/textView5"
-        android:textSize="10dp"
-        android:layout_below="@+id/passwordtxt"
-        android:layout_alignStart="@+id/textView4" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="one numerical"
-        android:id="@+id/textView6"
-        android:textSize="10dp"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5" />
+        android:id="@+id/textView9"
+        android:text="* Password must at least have 8 characters,one uppercase and a number"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/button5" />
 
 
 
-    </RelativeLayout>
+
+</RelativeLayout>
