--- a/AbstractFood/app/src/main/res/drawable/round_background.xml
+++ b/AbstractFood/app/src/main/res/drawable/round_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#eeffffff" />
-    <corners android:bottomRightRadius="180dip"
-        android:bottomLeftRadius="180dip"
-        android:topRightRadius="180dip"
-        android:topLeftRadius="180dip"/>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF" />
+    <corners android:bottomRightRadius="100dp" android:bottomLeftRadius="100dp" android:topLeftRadius="100dp" android:topRightRadius="100dp" />
+    <padding android:left="1dp" android:top="1dp" android:right="1dp" android:bottom="1dp" />
 </shape>
