--- a/AbstractFood/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -5,9 +5,10 @@
     android:layout_height="wrap_content">
 
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/profile_pic"
         android:clickable="true"
         android:cropToPadding="true"
@@ -17,7 +18,7 @@
         android:background="@drawable/round_background"
 
 
-        ></ImageButton>
+        ></ImageView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
