--- a/AbstractFood/app/src/main/res/layout/activity_forgot_username_password.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_forgot_username_password.xml
@@ -7,37 +7,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.food.abstractfood.ChangePassword">
+    tools:context="com.food.abstractfood.ForgotUsernamePassword">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="3000dp"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editText6"
+        android:id="@+id/enterEmail"
+        android:hint="Enter Email Address"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp"
-        android:hint="New Password"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="60dp"
-        android:hint="Verify Password"/>
+        android:layout_marginTop="48dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Done"
-        android:id="@+id/done_changePassword"
-        android:layout_marginTop="63dp"
-        android:layout_below="@+id/editText7"
+        android:text="Send"
+        android:clickable="true"
+        android:id="@+id/sendEmail"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/enterEmail"
         android:layout_alignParentStart="true"
         style="@style/all_button_colors"/>
 </RelativeLayout>
