--- a/AbstractFood/app/src/main/res/layout-land/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout-land/activity_signup.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:id="@+id/username_signup"
         android:hint="Username"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -33,9 +33,9 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText4"
+        android:id="@+id/email_signup"
         android:hint="Email Address"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/username_signup"
         android:layout_alignParentStart="true"
         android:layout_marginTop="24dp" />
 
