--- a/AbstractFood/app/src/main/res/layout/activity_change_password.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_change_password.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText6"
+        android:id="@+id/passwordChangePS"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp"
@@ -25,8 +25,8 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
+        android:id="@+id/verifyPasswordChangePs"
+        android:layout_below="@+id/passwordChangePS"
         android:layout_alignParentStart="true"
         android:layout_marginTop="60dp"
         android:hint="Verify Password"/>
@@ -37,7 +37,7 @@
         android:text="Done"
         android:id="@+id/done_changePassword"
         android:layout_marginTop="63dp"
-        android:layout_below="@+id/editText7"
+        android:layout_below="@+id/verifyPasswordChangePs"
         android:layout_alignParentStart="true"
         style="@style/all_button_colors"/>
 </RelativeLayout>
