--- a/AbstractFood/app/src/main/res/layout/activity_login.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/passwordLogin"
         android:layout_below="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:layout_marginTop="30dp"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:text="Sign In"
         android:id="@+id/button"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/passwordLogin"
         android:layout_alignParentStart="true"
         android:layout_marginTop="51dp"
         style="@style/all_button_colors"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="new user"
-        android:id="@+id/button2"
+        android:id="@+id/newUserButton"
         android:layout_marginTop="52dp"
         android:layout_below="@+id/button"
         android:layout_alignParentStart="true"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:text="anonymous"
         android:id="@+id/button3"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/newUserButton"
         android:layout_marginTop="46dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -80,7 +80,7 @@
         android:textColor="#1E88E5"
         android:id="@+id/forgotUsrNameOrPs"
         android:linksClickable="true"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/passwordLogin"
         android:layout_centerHorizontal="true"
         android:clickable="true" />
 
