--- a/AbstractFood/app/src/main/res/drawable/button.xml
+++ b/AbstractFood/app/src/main/res/drawable/button.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
         <solid android:color="@color/background_button"/>
-        <stroke android:width="1dip" android:color="@color/colorPrimaryDark"/>
-        <corners android:bottomLeftRadius="50dp"
+       <stroke android:width="1dip" android:color="@color/colorPrimaryDark"/>
+     <!--   <corners android:bottomLeftRadius="50dp"
                  android:bottomRightRadius="50dp"
                  android:topLeftRadius="50dp"
-                 android:topRightRadius="50dp"/>
-        <padding android:bottom="0dip"
+                 android:topRightRadius="50dp"/> -->
+    <padding android:bottom="0dip"
                  android:left="0dip"
                  android:right="0dip"
                  android:top="0dip"/>
