--- a/AbstractFood/app/src/main/res/layout/activity_searchbyname.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_searchbyname.xml
@@ -14,6 +14,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Search"
+        android:lines="1"
+        android:singleLine="true"
 
         />
     <ListView
