--- a/AbstractFood/app/src/main/res/layout/activity_signup.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_signup.xml
@@ -12,32 +12,31 @@
         tools:context="com.food.abstractfood.SignupActivity"
 
         >
+    <EditText
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/username_signup"
+        android:hint="Username"
+        android:layout_marginTop="36dp"
 
-        <EditText
+        android:layout_below="@+id/addprofilepicture"
+        android:layout_alignStart="@+id/email_signup" />
+
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/email_signup"
             android:hint="Email Address"
-            android:layout_marginTop="34dp"
             android:layout_below="@+id/username_signup"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignStart="@+id/passwordtxt" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/username_signup"
-            android:hint="Username"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="25dp"
 
-            />
 
-        <EditText
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -45,8 +44,7 @@
             android:hint="Password"
             android:id="@+id/passwordtxt"
             android:layout_below="@+id/email_signup"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="32dp" />
+            android:layout_alignStart="@+id/verifyPasswordtxt" />
 
     <EditText
 
@@ -56,7 +54,6 @@
         android:ems="10"
         android:hint="Verify Password"
         android:id="@+id/verifyPasswordtxt"
-        android:layout_marginTop="31dp"
         android:layout_below="@+id/passwordtxt"
         android:layout_centerHorizontal="true" />
 
@@ -68,11 +65,10 @@
         android:text="Cancel"
         android:clickable="true"
         android:id="@+id/cancel_signup"
-        style="@style/all_button_colors"
-        android:layout_marginTop="55dp"
+
+        android:layout_marginTop="41dp"
         android:layout_below="@+id/verifyPasswordtxt"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="37dp" />
+        android:layout_toStartOf="@+id/textView12" />
 
     <Button
         android:layout_width="wrap_content"
@@ -80,10 +76,28 @@
         android:text="Sign up"
         android:id="@+id/signup"
         android:onClick="stuff"
-        style="@style/all_button_colors"
+
         android:layout_alignTop="@+id/cancel_signup"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="34dp" />
+        android:layout_alignEnd="@+id/verifyPasswordtxt" />
+
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:id="@+id/addprofilepicture"
+        android:src= "@drawable/addprofilepicture"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Add Image"
+        android:id="@+id/textView12"
+        android:layout_above="@+id/username_signup"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
